# cmake_tutorial

./: CMakeLists.txt
cmake_tutorial/: CMakeLists.txt  main.cpp
